# rnnoise

./: CMakeLists.txt  README
examples/: babble_5dB.pcm  convert.sh  rnnoise_demo.c
include/: rnnoise.h
src/: denoise.c
